# fisher_face

./: CMakeLists.txt  README.md
src/: face_compare.cpp  face_save.cpp  fisher_face.cpp
